<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEFEFE"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTemplate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="312dp"
        android:hint="@string/result"
        android:textColorHint="#757575"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="32dp"
        android:padding="10dp"
        android:text="@string/get_result"
        android:textColor="#121212"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/write_the_city"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvTemplate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>